# world-stats

./: README.md
backend/: app.py  graphql_models.py  models.py  pyproject.toml  schemas.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx  world-stats-nav.tsx
frontend/src/app/countries/: columns.tsx  data-table.tsx  page.tsx
frontend/src/app/countries/country/: WorldStatsBarChart.tsx  WorldStatsCountryPageBackButton.tsx  WorldStatsPieChart.tsx  WorldStatsUpdateCountryDialogContent.tsx  actions.ts  page.tsx
frontend/src/app/login/: actions.ts  page.tsx
frontend/src/components/: login-form.tsx
