[tool.poetry]
name = "world-stats-backend"
version = "0.1.0"
description = ""
authors = ["Kelvin Chukwu <chukwu.kelvin@yahoo.com>"]
package-mode = false 

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-smorest = "^0.44.0"
flask-mysqldb = "^2.0.0"
poetry-dotenv-plugin = "^0.2.0"
flask-sqlalchemy = "^3.1.1"
flask-sqlacodegen = "^2.0.0"
flask-marshmallow = "^1.2.1"
marshmallow-sqlalchemy = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
